plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'org.qp.android'
    compileSdk 35

    defaultConfig {
        applicationId "org.qp.android"
        minSdk 26
        targetSdk 34
        versionCode 202400
        versionName "3.24.0"
        resourceConfigurations += ['en', 'ru']
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        externalNativeBuild {
            cmake {
                arguments "-DBUILD_JAVA=1"
                cFlags "-DANDROID"
            }
        }
    }

    configurations {
        configureEach {
            exclude group: 'xpp3', module: 'xpp3'
        }
    }

    externalNativeBuild {
        cmake {
            version "3.22.1"
            path "src/main/cpp/CMakeLists.txt"
        }
    }

    signingConfigs {
        release {
            storeFile file("keystore/github_keystore")
            storePassword System.getenv('KEYSTORE_PASSWORD')
            keyAlias System.getenv('RELEASE_SIGN_KEY_ALIAS')
            keyPassword System.getenv('RELEASE_SIGN_KEY_PASSWORD')
        }
    }

    buildTypes {
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "java.util.Date", "BUILD_TIME", "new java.util.Date(" + System.currentTimeMillis() + "L)"
        }
        release {
            signingConfig signingConfigs.release
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "java.util.Date", "BUILD_TIME", "new java.util.Date(" + System.currentTimeMillis() + "L)"
        }
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        viewBinding true
        dataBinding true
        buildConfig true
    }

    ndkVersion = '27.2.12479018'
    lint {
        abortOnError false
    }

}

dependencies {
    coreLibraryDesugaring(libs.desugar.jdk.libs)

    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.documentfile
    implementation libs.preference
    implementation libs.fragment
    implementation libs.webkit
    implementation libs.navigation.fragment
    implementation libs.androidx.navigation.ui
    implementation libs.androidx.work.runtime
    implementation libs.material
    implementation libs.androidx.core.splashscreen
    implementation libs.androidx.collection
    implementation libs.androidx.recyclerview

    implementation libs.stax.api
    implementation libs.woodstox.core

    implementation libs.changelog
    implementation libs.colorpicker
    implementation libs.jsoup
    implementation libs.appupdater
    implementation libs.storage
    implementation libs.picasso

    implementation libs.retrofit
    implementation libs.converter.jackson

    implementation libs.rxandroid

    implementation libs.unpacker

    implementation libs.jackson.core
    implementation libs.jackson.databind
    implementation libs.jackson.annotations
    implementation libs.jackson.dataformat.xml

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}